When one camera is not avaible the others should still be displayed.